--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "colyseus.js": "^0.12.0",
     "cordova-android": "8.1.0",
     "core-js": "^2.5.4",
     "phaser-ce": "^2.14.0",
+    "ngx-socket-io": "^3.0.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
