--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "colyseus.js": "^0.12.0",
+    "cordova": "^9.0.0",
     "cordova-android": "8.1.0",
+    "cordova-cli": "^1.0.0",
     "core-js": "^2.5.4",
     "ngx-socket-io": "^3.0.1",
     "phaser-ce": "^2.14.0",
