--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jamBellecour",
+  "name": "jambellecour",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -27,17 +27,17 @@
     "cordova": "^9.0.0",
     "cordova-android": "8.1.0",
     "cordova-cli": "^1.0.0",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^4.0.0",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-statusbar": "2.4.2",
     "core-js": "^2.5.4",
     "ngx-socket-io": "^3.0.1",
     "phaser-ce": "^2.14.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1",
-    "cordova-plugin-statusbar": "2.4.2",
-    "cordova-plugin-device": "2.0.2",
-    "cordova-plugin-splashscreen": "5.0.2",
-    "cordova-plugin-ionic-webview": "^4.0.0",
-    "cordova-plugin-ionic-keyboard": "^2.0.5"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
@@ -86,5 +86,17 @@
     "platforms": [
       "android"
     ]
+  },
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MorganCode/jamBellecour.git"
+  },
+  "keywords": [
+    "jam"
+  ],
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MorganCode/jamBellecour/issues"
   }
 }
